# ResearchPaper

./: .gitignore  pyproject.toml  requirements.txt
src/researchpaper/: constants.py  exceptions.py  main.py
src/researchpaper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_open.py
