[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "researchpaper"
version = "0.0.1"
authors = [
  { name="Hoang Minh Nguyen", email="hminh100304@gmail.com" },
]
description = "Analyze your research documents with this package."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
[project.urls]
Homepage = "https://github.com/minhdenthedev/ResearchPaper"
Issues = "https://github.com/minhdenthedev/ResearchPaper/issues"